leptos_macro/tests/view/58_duplicate_into_prop.stderr
error: This element already has a `label` attribute.
  --> tests/view/58_duplicate_into_prop.rs:12:34
   |
12 |             <Inner label="hello" label="world"/>
   |                                  ^^^^^^^^^^^^^
